@@ -1,4 +1,9 @@
+2002-08-04  Padraig O'Briain  <padraig.obriain@sun.com>
+	
+	* src/yelp-reader.c (yelp_reader_start): Fixes #89038
+	
 2002-08-04  Mikael Hallendal  <micke@codefactory.se>
+
 
 	* src/yelp-info.c (yelp_info_read_info_dir): 
 	- support info files that is named name.gz. Fixes #85324.
